vlib/v/checker/tests/non_nil_array_with_nil_element_err.vv
const spnames = ['f', unsafe { nil }]!
const spnames1 = [unsafe { nil }, 'f']!
